--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy":"gh-page -d dist"
+    "deploy":"gh-pages -d dist"
   },
   "devDependencies": {
     "vite": "^3.0.7"
