--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "vite": "^3.0.7"
   },
-  "homepage": "https//vcasteline.github.io/valentinas-portfolio",
+  "homepage": "https://vcasteline.github.io/valentinas-portfolio",
   "dependencies": {
     "aos": "^2.3.4",
     "bootstrap-icons": "^1.9.1",
